--- a/kafka-beginners-course/pom.xml
+++ b/kafka-beginners-course/pom.xml
@@ -20,5 +20,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.20.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
