56. Twitter Setup (#5 Section 9: Kafka Twitter Producer & Advanced Configurations)

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ build/
 node_modules/
 /src/main/resources/assignment/Section03Mono/file_to_write.txt
 /src/main/resources/assignment/Section03Mono/file_to_delete.txt
+
+SECRETS.md
