73. Consumer Part 1 - Setup Project (#6)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ node_modules/
 SECRETS.md
 !**/secrets.properties
 /kafka-twitter-producer/src/main/resources/secrets.properties
+/kafka-consumer-elasticsearch/src/main/resources/secrets.properties
