--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>kafka-beginners-course</module>
         <module>kafka-twitter-producer</module>
+        <module>kafka-consumer-elasticsearch</module>
     </modules>
 
     <properties>
@@ -38,6 +39,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.elasticsearch.client</groupId>
+                <artifactId>elasticsearch-rest-high-level-client</artifactId>
+                <version>7.10.2</version>
+            </dependency>
             <dependency>
                 <groupId>com.twitter</groupId>
                 <artifactId>hbc-core</artifactId> <!-- or hbc-twitter4j -->
