--- a/kafka-consumer-elasticsearch/pom.xml
+++ b/kafka-consumer-elasticsearch/pom.xml
@@ -19,6 +19,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.7</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
         </dependency>
