--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>kafka-beginners-course</module>
         <module>kafka-twitter-producer</module>
         <module>kafka-consumer-elasticsearch</module>
+        <module>kafka-streams-filter-tweets</module>
     </modules>
 
     <properties>
@@ -60,6 +61,16 @@
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
                 <version>${kafka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-streams</artifactId>
+                <version>${kafka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.7</version>
             </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
